# mlops_zoomcamp

./: pyproject.toml
hw1/: hw1.ipynb
