[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Kseniia Alekseitseva <kseniia.iagafarova@sit.auto>"]
readme = "README.md"
packages = [{include = "mlops_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
ipykernel = "^6.23.1"
ipywidgets = "^8.0.6"
pyarrow = "^12.0.0"
fastparquet = "^2023.4.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
